--- a/templates/login.html
+++ b/templates/login.html
@@ -99,18 +99,10 @@
 <body>
     <div class="container">
         <h1>SPOTIFY TOKEN GENERATOR</h1>
-        <form onsubmit="handleSubmit(event)">
-            <div class="form-group">
-                <label for="client_id">CLIENT ID:</label>
-                <input type="text" id="client_id" name="client_id" required>
-            </div>
-            <div class="form-group">
-                <label for="client_secret">CLIENT SECRET:</label>
-                <input type="text" id="client_secret" name="client_secret" required>
-            </div>
-            <div style="text-align: center;">
-                <button type="submit">GENERATE TOKEN</button>
-            </div>
+        <form method="POST" action="{{ url_for('submit_credentials') }}">
+            <input type="text" name="client_id" placeholder="Client ID" required>
+            <input type="text" name="client_secret" placeholder="Client Secret" required>
+            <button type="submit">Submit</button>
         </form>
     </div>
 </body>
